# Salvate

./: .gitignore  README.md  package.json  pyproject.toml  requirements.txt
app/: __init__.py  config.py  database.py  main.py
app/api/: __init__.py  auth.py  dashboard.py  subscriptions.py  users.py
app/core/: __init__.py  auth.py  security.py
app/models/: __init__.py  subscription.py  user.py
app/static/css/: auth-style.css  dashboard-style.css  dashboard-style.new.css  style.css
app/static/js/: dashboard-script.js  dashboard.js  main.js  profile.js  welcome.js
app/templates/: base-auth.html  base-dashboard.html  base.html  career.html  changes.html  faq.html  help-center.html  index.html  team.html
app/templates/auth/: login.html  register.html
app/templates/components/: footer.html  login_modal.html  nav.html  register_modal.html
app/templates/dashboard/: index.html  profile.html
salvatetest/: main.py
salvatetest/locales/: en.json  ru.json
salvatetest/templates/: index.html
tests/: __init__.py  test_auth.py  test_subscriptions.py  test_users.py
